Added onFrameActive callback

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ var animationSettings = {
         if (toggling){
             toggleAnimation();
         }
+    },
+    onFrameActive: function(frameNumber){
+        console.log(frameNumber);
     }
 };
 
